--- a/package.json
+++ b/package.json
@@ -3,12 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^2.7.0",
+    "@react-three/drei": "^7.22.6",
+    "@react-three/fiber": "^7.0.19",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
+    "gh-pages": "^3.2.3",
+    "google-map-react": "^2.1.10",
+    "gsap": "^3.8.0",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "three": "^0.134.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
