--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "1122sushi",
+  "homepage": "https://Cheyu0323.github.io/SUSHI",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -25,6 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "redeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
